--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "gasp": "^0.0.2",
+    "gsap": "^3.13.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
